--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.21.6
-pandas==1.3.5
+numpy==1.25.2
+pandas==2.1.4
 matplotlib==3.5.3
 seaborn==0.12.2
-streamlit
+Babel==2.12.1
+streamlit==1.30.0
